JumpScript/tests/baselines/reference/importHelpersNoHelpers.errors.txt
tests/cases/compiler/external.jump(1,1): error TS2343: This syntax requires an imported helper named '__exportStar', but module 'tslib' has no exported member '__exportStar'.
tests/cases/compiler/external.jump(3,16): error TS2343: This syntax requires an imported helper named '__extends', but module 'tslib' has no exported member '__extends'.
tests/cases/compiler/external.jump(7,1): error TS2343: This syntax requires an imported helper named '__decorate', but module 'tslib' has no exported member '__decorate'.
tests/cases/compiler/external.jump(7,1): error TS2343: This syntax requires an imported helper named '__metadata', but module 'tslib' has no exported member '__metadata'.
tests/cases/compiler/external.jump(9,12): error TS2343: This syntax requires an imported helper named '__param', but module 'tslib' has no exported member '__param'.
tests/cases/compiler/external.jump(14,13): error TS2343: This syntax requires an imported helper named '__assign', but module 'tslib' has no exported member '__assign'.
tests/cases/compiler/external.jump(15,12): error TS2343: This syntax requires an imported helper named '__rest', but module 'tslib' has no exported member '__rest'.


==== tests/cases/compiler/external.jump (7 errors) ====
    export * from "./other";
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__exportStar', but module 'tslib' has no exported member '__exportStar'.
    export class A { }
    export class B extends A { }
                   ~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__extends', but module 'tslib' has no exported member '__extends'.
    
    declare var dec: any;
    
    @dec
    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__decorate', but module 'tslib' has no exported member '__decorate'.
    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__metadata', but module 'tslib' has no exported member '__metadata'.
    class C {
        method(@dec x: number) {
               ~~~~
!!! error TS2343: This syntax requires an imported helper named '__param', but module 'tslib' has no exported member '__param'.
        }
    }
    
    const o = { a: 1 };
    const y = { ...o };
                ~~~~
!!! error TS2343: This syntax requires an imported helper named '__assign', but module 'tslib' has no exported member '__assign'.
    const { ...x } = y;
               ~
!!! error TS2343: This syntax requires an imported helper named '__rest', but module 'tslib' has no exported member '__rest'.
    
==== tests/cases/compiler/other.jump (0 errors) ====
    export const x = 1;
    
==== tests/cases/compiler/script.jump (0 errors) ====
    class A { }
    class B extends A { }
    
    declare var dec: any;
    
    @dec
    class C {
        method(@dec x: number) {
        }
    }
    
==== tests/cases/compiler/tslib.d.jump (0 errors) ====
    export {}
    